--- a/index.htm
+++ b/index.htm
@@ -16,13 +16,20 @@
     </nav>
 
     <main>
-      <h3>Hello, I'm</h3>
+	<div class="image">
+		<img src="Gerona.jfif">		
+	</div>
+     	
+	<div>
+		<h3>Hello, I'm</h3>
       <h1>Jayrald Gerona</h1>
       <h2>Computer Engineer</h2>
       <button>Get In Touch</button>
+	</div>
     </main>
   </div>
 
   
 </body>
 </html>
+
